0.1.4 (working release)
-----------------------
1. Changed the verbose printing of TME matlab.

2. Update docs by adding TME filters and smoothers.

3. Change the function signatures `a` and `b` to `drift` and `dispersion` to be more explicit.

4. Remove the spectral density `Qw`. This `Qw` seems to be useful in some isolated cases only. If one wants to specify `Qw`, please put its Cholesky decomposition into the dispersion function. 

5. Some code simplifications.

6. Fixed a plotting error in `examples/generate_lorenz_anime.py`. This error is due to a bug of `matplotlib`, see https://github.com/matplotlib/matplotlib/issues/22308.

...

0.1.3 (August 17, 2021)
-----------------------
1. Added a new Lorenz example as well as some documentations.

2. The requirement for Python is now down to 3.7 (JaX does not support 3.6 anymore). The necessity for using `math.comb` is removed. 

0.1.2 (August 16, 2021)
-----------------------
1. Removed `_phi_i`, `_phi_ii`, and the naive implementation `generator_power_naive` in `base_jax`. 
The function `generator` is also written as a special case of `generator_power` when `order=1`. The old 
implementaions are now moved to the test folder.

2. Make sure the shape of `b` and `Qw` are consistent. Added `_format_noise` and `_format_dispersion`.

3. Removed the requirements for jax in `requirement.txt`. The users must install jax by themself so that 
they can choose to use cpu or gpu.

4. Slightly updated the examples in `./python/examples`.

5. In the docstrings of `base_jax` there were wrong "Symbolic spectral ...". Removed. 

6. Documentation updated.

0.1.1 (August 15, 2021)
-----------------------
1. Examples in README.md and ./python/README.md are missing `import jax.numpy as jnp`. 
Fixed.

2. Rewrote the Hessian product in `base_jax.generator_power()`. The unnecessary argument `phi_out_ndims` 
is now removed.

3. Added unittest for 1d and 2d target function phi

0.1.0 (August 15, 2021)
-----------------------
Initial release.