@@ -14,6 +14,6 @@ It is also shown by Zhao et al. (2020) and Zhao (2021) that TME can be used in G
 
 - Zheng Zhao. State-space deep Gaussian processes. PhD thesis, Aalto University, 2021. `[PDF] <https://github.com/zgbkdlm/dissertation>`_
 
-- Zheng Zhao and Simo Särkkä. Non-linear Gaussian smoothing with Taylor moment expansion. arXiv:2110.01396, 2021.
+- Zheng Zhao and Simo Särkkä. Non-linear Gaussian smoothing with Taylor moment expansion. IEEE Signal Processing Letters, 2021.
 
 - Zheng Zhao, Toni Karvonen, Roland Hostettler, and Simo Särkkä. Taylor moment expansion for continuous-discrete Gaussian filtering. IEEE Transactions on Automatic Control, 66(9):4460-4467, 2021. `[DOI] <https://doi.org/10.1109/TAC.2020.3047367>`_
